objects/MulCommits__c.object
<CustomObject>
    <description>Na3 Pavan</description>
    <fields>
        <fullName>MulCommitField2__c</fullName>
        <description>Test</description>
        <label>MulCommitField2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MulCommitsField__c</fullName>
        <description>Na3 demo one test</description>
        <label>MulCommitsField</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MulCustomField3__c</fullName>
        <label>MulCustomField3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>MulCommits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MulCommits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MulCommits</pluralLabel>
    <recordTypes>
        <fullName>MulRecordType</fullName>
        <active>true</active>
        <label>MulRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recordtype2</fullName>
        <active>false</active>
        <description>Test demo</description>
        <label>Recordtype2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>SR1__c</fullName>
        <label>SR1</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SR23__c</fullName>
        <label>SR2</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SR3__c</fullName>
        <label>SR3</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SR4__c</fullName>
        <label>SR4</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SR5__c</fullName>
        <label>SR5</label>
    </sharingReasons>
</CustomObject>